RESOLVED FIXED66913
Some layerTreeAsText compositing tests are flaky
https://bugs.webkit.org/show_bug.cgi?id=66913
Summary Some layerTreeAsText compositing tests are flaky
James Robinson
Reported 2011-08-24 17:56:48 PDT
[chromium] Some layerTreeAsText compositing tests are flaky
Attachments
Patch (1.41 KB, patch)
2011-08-24 17:57 PDT, James Robinson
no flags
Patch (2.84 KB, patch)
2011-08-24 19:15 PDT, James Robinson
no flags
James Robinson
Comment 1 2011-08-24 17:57:32 PDT
James Robinson
Comment 2 2011-08-24 17:58:28 PDT
Since the parallelization changes for webkit_gpu_tests a few tests have been flaky with the failure mode being that the dumped GraphicsLayer tree sometimes doesn't show up in the layer tree. This patch seems to fix the flake, but I'm not completely sure what is going on here.
James Robinson
Comment 3 2011-08-24 19:15:14 PDT
James Robinson
Comment 4 2011-08-24 19:16:39 PDT
I don't actually think this is limited to chromium, the cross-platform code seems a bit unreliable too. Simon: We've been seeing some layerTreeAsText tests flake out, occasionally the GraphicsLayer tree is not up to date when layoutTestController.layerTreeAsText() is called. This seems like the right fix and only impacts test code. I suspect that a similar thing is happening on the mac port.
Simon Fraser (smfr)
Comment 5 2011-08-24 20:52:04 PDT
Comment on attachment 105121 [details] Patch I wonder if this fixes the tiled layer flakiness.
WebKit Review Bot
Comment 6 2011-08-24 22:50:14 PDT
Comment on attachment 105121 [details] Patch Clearing flags on attachment: 105121 Committed r93760: <http://trac.webkit.org/changeset/93760>
WebKit Review Bot
Comment 7 2011-08-24 22:50:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.