Some layerTreeAsText compositing tests are flaky https://bugs.webkit.org/show_bug.cgi?id=66913

Patch by James Robinson <jamesr@chromium.org> on 2011-08-24
Reviewed by Simon Fraser.

Remove compositingLayerUpdatePending() and unconditionally update compositing layers when
RenderLayerCompositor::layerTreeAsText().  compositingLayerUpdatePending() was only used by test code and is
unreliable.

Covered by compositing/ layerTreeAsText tests.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::layerTreeAsText):
* rendering/RenderLayerCompositor.h:

Canonical link: https://commits.webkit.org/82710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93760 268f45cc-cd09-0410-ab3c-d52691b4dbfc